<resources>

    <string name="app_name">KnowYourTax</string>
    <string name="main_activity_button">Calculate</string>
    <string name="senior_citizen">Senior Citizen</string>
    <string name="metro">Metro</string>
    <string name="HintText">Hint Text</string>
    <string name="professionalTax">Professional Tax</string>
    <string name="HRA">HRA</string>
    <string name="conveyance">Conveyance</string>
    <string name="income">Annual Income</string>
    <string name="basicPay">Basic Pay per Month</string>
    <string name="foodVouchers">Food Vouchers</string>

    <string name="tax_payer_prompt">Tax Payer</string>
    <string-array name="tax_payer">
        <item>Select</item>
        <item>Individual</item>
        <item>HUF</item>
        <item>Domestic Companny</item>
        <item>Foreign Company</item>
    </string-array>


</resources>
